[package]
name = "adaptive-pressure-advance"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "Storage", "Window", "Document", "Element", "HtmlElement",
    "Navigator", "Clipboard"
] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
